Fix blockly wrapper z-index

--- a/frontend/tralalere/tralalere.scss
+++ b/frontend/tralalere/tralalere.scss
@@ -281,6 +281,7 @@ $tralalere-red: #FF3C11;
   border-radius: 15px;
   overflow: hidden;
   background: rgba(255,0,0,0);
+  z-index: 1;
 }
 .blockly-flyout-wrapper-bottom {
   position: absolute;
